--- a/fazer/css/style.css
+++ b/fazer/css/style.css
@@ -1,11 +1,21 @@
+@import "header.css";
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 h1,
 h2,
 h3,
 p,
-li {
+li,
+a {
   margin: 0;
   padding: 0;
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
 }
