--- a/fazer/css/style.css
+++ b/fazer/css/style.css
@@ -1,4 +1,5 @@
 @import "header.css";
+@import "intro-index.css";
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -18,4 +19,8 @@ ul {
   text-decoration: none;
   padding: 0;
   margin: 0;
+}
+img {
+  max-width: 100%;
+  display: block;
 }
