--- a/fazer/css/intro-index.css
+++ b/fazer/css/intro-index.css
@@ -44,3 +44,42 @@
   object-fit: cover;
   border-radius: 4px;
 }
+@media (max-width: 1150px) {
+  .intro h1 {
+    font-size: 3rem;
+    transition: 0.3s;
+  }
+  .intro p {
+    font-size: 1.12rem;
+    transition: 0.3s;
+  }
+}
+@media (max-width: 850px) {
+  .intro h1 {
+    font-size: 2rem;
+    transition: 0.3s;
+    margin-bottom: 1rem;
+    transition: 0.3s;
+  }
+  .intro {
+    grid-template-columns: 1fr;
+    transition: 0.3s;
+  }
+  .intro-conteudo {
+    padding: 2rem;
+    transition: 0.3s;
+  }
+  .intro-bg {
+    background-color: #111111;
+    padding-top: 2.5rem;
+    box-shadow: inset 0 -60px 0 #ffffff;
+    transition: 0.3s;
+  }
+}
+@media (max-width: 650px) {
+  .btn {
+    padding: 0.75rem 1.2rem;
+    font-size: 1rem;
+    transition: 0.3s;
+  }
+}
