--- a/fazer/css/style.css
+++ b/fazer/css/style.css
@@ -1,8 +1,12 @@
 @import "header.css";
 @import "intro-index.css";
+@import "fontes.css";
+@import "global.css";
+@import "cores.css";
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  color: #111111;
 }
 h1,
 h2,
