--- a/fazer/css/style.css
+++ b/fazer/css/style.css
@@ -1,8 +1,11 @@
-@import "header.css";
-@import "intro-index.css";
-@import "fontes.css";
 @import "global.css";
 @import "cores.css";
+@import "fontes.css";
+/*menu*/
+@import "header.css";
+/*home*/
+@import "intro-index.css";
+@import "bicicletas.css";
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -17,6 +20,7 @@ a {
   margin: 0;
   padding: 0;
   text-decoration: none;
+  color: inherit;
 }
 ul {
   list-style: none;
@@ -27,4 +31,7 @@ ul {
 img {
   max-width: 100%;
   display: block;
+}
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
