--- a/fazer/css/fontes.css
+++ b/fazer/css/fontes.css
@@ -26,13 +26,13 @@ font-family: 'Roboto', sans-serif;
   font: 400 1.5rem/1.5 "Poppins", sans-serif;
 }
 .texto-normal {
-  font: 500 1.125/135 "Poppins", sans-serif;
+  font: 500 1.125rem/1.35 "Poppins", sans-serif;
 }
 .texto-normal-b {
-  font: 600 1.125/135 "Poppins", sans-serif;
+  font: 600 1.125rem/1.35 "Poppins", sans-serif;
 }
 .texto-normal-2 {
-  font: 500 1.125/135 "Roboto", sans-serif;
+  font: 500 1.125rem/1.35 "Roboto", sans-serif;
 }
 .texto-medio {
   font: 400 1rem/1.5 "Poppins", sans-serif;
