--- a/fazer/css/footer.css
+++ b/fazer/css/footer.css
@@ -5,7 +5,43 @@
 .footer {
   display: grid;
   grid-template-columns: 3fr 5fr 4fr;
+  gap: 2.5rem;
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
 }
-.footer-contato{
-    
+.footer h3 {
+  margin-bottom: 2rem;
+}
+.footer-contatos ul {
+  margin-bottom: 2rem;
+}
+.footer li {
+  margin-bottom: 1rem;
+  color: var(--cor-5);
+}
+.footer-redes {
+  display: flex;
+  gap: 2rem;
+}
+.footer-contatos li:nth-child(even)::after {
+  content: " ";
+  display: block;
+  max-width: 80%;
+  height: 4px;
+  background-color: var(--cor-11);
+  margin-top: 1rem;
+}
+.footer a:hover {
+  color: var(--cor-P2);
+}
+.footer-cop {
+  grid-column: 1/-1;
+  text-align: left;
+  color: var(--cor-5);
+}
+@media (max-width: 700px) {
+  .footer {
+    grid-template-columns: 1fr;
+    max-width: 550px;
+  }
 }
