--- a/fazer/css/seguros.css
+++ b/fazer/css/seguros.css
@@ -1,11 +1,5 @@
 .seguros-bg {
   background-color: var(--cor-11);
-  height: 800px;
-}
-.seguros-bg div > h2 {
-  color: var(--cor-1);
-  grid-column: 1/-1;
-  margin-bottom: 2.5rem;
 }
 .seguros {
   display: grid;
@@ -13,6 +7,11 @@
   grid-template-columns: 1fr 1fr;
   align-items: center;
   gap: 2.5rem;
+}
+.seguros-bg div > h2 {
+  color: var(--cor-1);
+  grid-column: 1/-1;
+  margin-bottom: 2.5rem;
 }
 .seguro-item {
   background: var(--cor-12);
@@ -57,4 +56,13 @@
   height: 8px;
   background-image: url(".././img/icones/lista.svg");
   left: -21px;
+}
+@media (max-width: 900px) {
+  .seguros {
+    grid-template-columns: 1fr;
+  }
+  .seguro-item {
+    max-width: 800px;
+    margin: 0 auto;
+  }
 }
