--- a/fazer/css/fontes.css
+++ b/fazer/css/fontes.css
@@ -13,7 +13,9 @@ font-family: 'Roboto', sans-serif;
 .subtitulo-2 {
   font: 500 2.5rem/1.25 "Roboto", sans-serif;
 }
-
+.subtitulo-2p {
+  font: 500 2rem/1.25 "Roboto", sans-serif;
+}
 .texto-grande-2 {
   font: 400 1.5rem/1.5 "Roboto", sans-serif;
 }
@@ -30,6 +32,7 @@ font-family: 'Roboto', sans-serif;
 }
 .texto-normal-b {
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
+  text-transform: uppercase;
 }
 .texto-normal-2 {
   font: 500 1.125rem/1.35 "Roboto", sans-serif;
@@ -65,7 +68,18 @@ font-family: 'Roboto', sans-serif;
     transition: 0.3s;
   }
   .subtitulo-1,
-  .subtitulo-2 {
+  .subtitulo-2,
+  .subtitulo-2p {
     font-size: 1.5rem;
+  }
+  .texto-normal-b,
+  .texto-normal {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 450px) {
+  .texto-normal-b,
+  .texto-normal {
+    font-size: 0.5rem;
   }
 }
