--- a/fazer/css/home/seguros.css
+++ b/fazer/css/home/seguros.css
@@ -3,7 +3,8 @@
 }
 .seguros {
   display: grid;
-  padding: 3.75rem 0;
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
   grid-template-columns: 1fr 1fr;
   align-items: center;
   gap: 2.5rem;
