--- a/fazer/css/home/seguros.css
+++ b/fazer/css/home/seguros.css
@@ -1,6 +1,7 @@
 .seguros-bg {
   background-color: var(--cor-11);
 }
+
 .seguros {
   display: grid;
   padding-top: 3.75rem;
@@ -65,5 +66,9 @@
   .seguro-item {
     max-width: 800px;
     margin: 0 auto;
+    padding: 20px;
+  }
+  .seguros.container {
+    padding: 40px 0;
   }
 }
